--- a/Aula1/julio/git-lfs.ipynb
+++ b/Aula1/julio/git-lfs.ipynb
@@ -32,6 +32,7 @@
     "Quando precisar fazer fetch, pode precisar:\n",
     "```bash\n",
     "git lfs fetch\n",
+    "git lfs pull\n",
     "```\n",
     "git lfs fetch  # Baixa os arquivos LFS para o .git/lfs/objects\n",
     "git lfs pull   # Baixa e faz checkout dos arquivos no working tree\n",
