added pacote para ler pdf e transformar em texto

--- a/Trabalho/jornada-cientista-dados.ipynb
+++ b/Trabalho/jornada-cientista-dados.ipynb
@@ -21,6 +21,86 @@
     "\n",
     "https://dados.transportes.gov.br/dataset/renaest\n",
     "\n",
+    "https://Dataverse.fgv.br\n",
+    "\n",
+    "https://dataverse.org/\n",
+    "\n",
+    "https://www.ibge.gov.br/estatisticas/downloads-estatisticas.html\n",
+    "\n",
+    "https://Data.rio\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7e8905b",
+   "metadata": {},
+   "source": [
+    "## Carga de exemplo: Contagem de Tráfego\n",
+    "\n",
+    "https://servicos.dnit.gov.br/dadosabertos/dataset/contagem-de-trafego\n",
+    "\n",
+    "O dicionário de dados do arquivo \"contagem-de-trafego-dicionario.pdf\", referente à Contagem de Tráfego – SNV 202001A, foi extraído e convertido para uma tabela Markdown equivalente.[1]\n",
+    "\n",
+    "## Tabela de Campos\n",
+    "\n",
+    "| Campo          | Tipo          | Descrição [1] |\n",
+    "|----------------|---------------|---------------------|\n",
+    "| ID             | Numérico     | id - Chave Primária Base Georreferenciada (base com quebras no SNV) |\n",
+    "| id_trecho_     | Numérico     | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| vl_br          | Numérico     | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| sg_uf          | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| nm_tipo_tr     | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| sg_tipo_tr     | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| desc_coinc     | Numérico     | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| vl_codigo      | Alfanumérico | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| ds_local_i     | Alfanumérico | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| ds_local_f     | Alfanumérico | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| vl_km_inic     | Numérico     | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| vl_km_fina     | Numérico     | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| vl_extensa     | Numérico     | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| vl_km_i_estim  | Numérico     | Estimativa de km inicial do trecho (decorrente das quebras realizadas no SNV) |\n",
+    "| vl_km_f_estim  | Numérico     | Estimativa de km final do trecho (decorrente das quebras realizadas no SNV) |\n",
+    "| vl_ext_estim   | Numérico     | Estimativa de extensão do trecho (decorrente das quebras realizadas no SNV) |\n",
+    "| ds_sup_fed     | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| ds_obra        | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| ds_coinc       | Alfanumérico | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| ds_tipo_ad     | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| ds_ato_leg     | Alfanumérico | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| est_coinc      | Alfanumérico | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| sup_est_co     | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| ds_jurisdi     | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| ds_superfi     | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| ds_legenda     | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| sg_legenda     | Texto        | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| leg_multim     | Alfanumérico | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| versao_snv     | Alfanumérico | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| id_versao      | Numérico     | Campos da Base Georreferenciada original do SNV 202001A |\n",
+    "| classificação  | Texto        | Classificação de Links Referenciais e Não Simuláveis (o uso do VMDa deve ser restrito ou complementado por análises pontuais caso a caso): \"Referencial\" - Identifica links da rede utilizados como Count Location na rede; \"Não Simulável\" - Identifica links da rede que estão próximos, ou sofrem influência direta, de grandes áreas urbanas e/ou regiões metropolitanas; \"Não Pavimentada\" - Identifica links da rede não pavimentados; \"Travessia - Não Simulável\" - Identifica links da rede que são travessias; \"Planejada\" - Identifica links planejados do SNV |\n",
+    "| GEH            | Texto        | Classificação de Links Referenciais conforme GEH obtido |\n",
+    "| A_C ... J_C    | Numérico     | Volume estimado (VMDa) para a Categoria do PNCT - Sentido Crescente (aplica-se a cada letra) |\n",
+    "| A_D ... J_D    | Numérico     | Volume estimado (VMDa) para a Categoria do PNCT - Sentido Decrescente (aplica-se a cada letra) |\n",
+    "| VMDa_C         | Numérico     | Volume estimado (VMDa) Total - Sentido Crescente |\n",
+    "| VMDa_D         | Numérico     | Volume estimado (VMDa) Total - Sentido Decrescente |\n",
+    "| NS_C           | Texto        | Nível de serviço indicativo - Sentido Crescente |\n",
+    "| NS_D           | Texto        | Nível de serviço indicativo - Sentido Decrescente |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a178a26f",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "- Download de 2020\n",
+    "- conferir colunas e tipos de dados\n",
+    "- carregar num data frame R\n",
+    "- rodar estatisticas descritivas - scatter plot\n",
     "\n"
    ]
   }
